Fixes for a useless horizontal scrollbar appearing

--- a/style/footer.scss
+++ b/style/footer.scss
@@ -4,10 +4,6 @@
 .footer {
   font-family: $default-head-font;
   color: $flat-silver;
-  padding: 10pt;
-  left: 0px;
-  width: 100%;
-  bottom: 0px;
   border-top: solid 1px #ccc;
 
   a {
